NAVAPP-147 Fix the right padding for the sidebar menu
The sidebar extension functionality was implemented before but visually long menu items look weird due to lack of the right padding.

--- a/navigation-application/projects/navapp/src/app/main-menu/components/expandable-menu-item/expandable-menu-item.component.scss
+++ b/navigation-application/projects/navapp/src/app/main-menu/components/expandable-menu-item/expandable-menu-item.component.scss
@@ -37,6 +37,7 @@
   overflow: hidden;
   padding: 0 10px 5px 0;
   position: relative;
+  white-space: nowrap;
 
   .mat-icon {
     color: $menu-icon-color;
