--- a/navigation-application/projects/navapp/src/styles/_variables.scss
+++ b/navigation-application/projects/navapp/src/styles/_variables.scss
@@ -96,7 +96,7 @@ $body-text-color: $grey-900;
 //
 // Font, line-height, and color for body text, headings, and more.
 $font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
-$font-weight-semibold: 600;
+$font-weight-semibold: 500;
 
 // Menu
 $menu-top-item-height: 48px;
